[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurigui"
version = "2.82.0"
authors = [
  { name="David Marcel BAUM", email="contact@davidbaum.org" },
]
description = "Graphical interface for the several biosensors for the work with electrophysiological data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
  "setuptools",
  "customtkinter==5.2.0",
  "numpy",
  "oauthlib",
  "Pillow",
  "PyGithub",
  "PyQt5",
  "pyqtgraph",
  "pyserial",
  "requests",
  "scipy"
]

[project.urls]
"Homepage" = "https://github.com/davidmarcelbaum/NeuriGUI"
"Bug Tracker" = "https://github.com/davidmarcelbaum/NeuriGUI/issues"

[tool.hatch.build.targets.wheel]
packages = ["neuri"]
